<resources>
    <string name="app_name">QuizTime</string>
    <string name="descripcion_imagenes">Imagen</string>
    <string name="mensaje_bienvenida">¡Bienvenido a QuizTime! Demuestra tus conocimientos sobre videojuegos</string>
    <string name="btn_empezar">Empezar</string>
    <string name="btn_volverempezar">Volver a empezar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_otravez">Intentar Otra Vez</string>
    <string name="btn_salir">Salir</string>
    <string name="pregunta1_num">1/5</string>
    <string name="pregunta2_num">2/5</string>
    <string name="pregunta3_num">3/5</string>
    <string name="pregunta4_num">4/5</string>
    <string name="pregunta5_num">5/5</string>
    <string name="pregunta1_enunciado">¿De qué país es originario el videojuego "Tetris"?</string>
    <string name="pregunta1_opcion1">Rusia</string>
    <string name="pregunta1_opcion2">China</string>
    <string name="pregunta1_opcion3">Estados Unidos</string>
    <string name="pregunta1_opcion4">Japón</string>
    <string name="pregunta2_enunciado">¿En qué década se lanzó el videojuego "Sonic The Hedgehog"?</string>
    <string name="pregunta2_opcion1">En la década de los 70s</string>
    <string name="pregunta2_opcion2">En la década de los 80s</string>
    <string name="pregunta2_opcion3">En la década de los 90s</string>
    <string name="pregunta2_opcion4">En la década de los 2000s</string>
    <string name="pregunta3_enunciado">¿Cuál es la consola de videojuegos más vendida hasta la fecha?</string>
    <string name="pregunta3_opcion1">Wii</string>
    <string name="pregunta3_opcion2">PlayStation 2</string>
    <string name="pregunta3_opcion3">Nintendo Switch</string>
    <string name="pregunta3_opcion4">PlayStation 4</string>
    <string name="pregunta4_enunciado">¿De qué videojuego es protagonista Kratos?</string>
    <string name="pregunta4_opcion1">Hades</string>
    <string name="pregunta4_opcion2">Immortals Fenyx Rising</string>
    <string name="pregunta4_opcion3">Dark Souls</string>
    <string name="pregunta4_opcion4">God of War</string>
    <string name="pregunta5_enunciado">¿Cuál es el videojuego más caro producido hasta la fecha?</string>
    <string name="pregunta5_opcion1">Red Dead Redemption 2</string>
    <string name="pregunta5_opcion2">Tomb Raider</string>
    <string name="pregunta5_opcion3">Grand Theft Auto V</string>
    <string name="pregunta5_opcion4">Call of Duty: Modern Warfare 2</string>
    <string name="puntuacion">Tu Puntuación</string>
    <string name="puntuacion_pordefecto">0</string>
</resources>