<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck_app"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_quiz"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/descripcion_imagenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@raw/quiz_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_empezar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/btn_general"
        android:onClick="empezarQuiz"
        android:text="@string/btn_empezar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quiz" />

    <TextView
        android:id="@+id/text_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/mensaje_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_quiz" />

</androidx.constraintlayout.widget.ConstraintLayout>